skeleton branch created and updated

--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@
 </h1>
 <h1>hey hello i am not a burger!</h1>
 <p>acha jani ye aj sat wala change hai </p>
+<p>acha ye ab skeleton branch keliye edit chalo hai!</p>
