--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
 <p>Hey hello i am local demo</p>
+<h2>hey hello w3school</h2>
+<h1>
+    hello ab mene w3 schl ko up kardia hai!
+</h1>
 <h1>hey hello i am not a burger!</h1>
+<p>acha jani ye aj sat wala change hai </p>
