--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@
 <h1>hey hello i am not a burger!</h1>
 <p>acha jani ye aj sat wala change hai </p>
 <p>acha ye ab skeleton branch keliye edit chalo hai!</p>
+<h1>changing some heading 1 and pushing!</h1>
