--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@
 <p>acha ye ab skeleton branch keliye edit chalo hai!</p>
 <h1>changing some heading 1 and pushing!</h1>
 <h2>adiing some content in NEWFTGITHUB</h2>
+<p>now i am addiing some content, Branch from Git</p>
